[r=blake-rouse][bug=1560492,1560495,1561222][author=ricgard] Fixes table column wrapping and table widths on node events

--- a/src/maasserver/static/scss/maas/base/_base.scss
+++ b/src/maasserver/static/scss/maas/base/_base.scss
@@ -54,6 +54,10 @@ ol {
     margin-left: 0;
 }
 
+a {
+  cursor: pointer;
+}
+
 a.link--alt {
   color: #333;
   border-bottom: 1px solid #CDCDCD;
