--- a/src/maasserver/static/scss/maas/components/_tables.scss
+++ b/src/maasserver/static/scss/maas/components/_tables.scss
@@ -46,7 +46,6 @@ $pale-grey:             #bcbcbc;
       text-align: left;
       border-collapse: collapse;
       vertical-align: top;
-      word-wrap: break-word;
     }
 
     // Table header row styles
